--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
+    "@angular/fire": "^5.4.2",
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.0",
     "@angular/material": "~8.2.3",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "angularfire2": "^5.4.2",
     "express": "^4.17.1",
+    "firebase": "^7.8.2",
     "hammerjs": "^2.0.8",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
